# Cloud-Native-5G-Network-Functions

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
amf/: CMakeLists.txt  Dockerfile
amf/src/: amf_server.cpp  amf_server.h  main.cpp
k8s/: amf-deployment.yaml  ue-sim-job.yaml  upf-deployment.yaml
metrics/: prometheus_exporter.h
proto/: n1.proto  n4.proto
transport-bench/: CMakeLists.txt  bench_compare.cpp  rest_amf_server.cpp
ue-sim/: CMakeLists.txt  Dockerfile  main.cpp
upf/: CMakeLists.txt  Dockerfile
upf/src/: main.cpp  thread_pool.h  upf_server.cpp  upf_server.h
